# Multi-agent-automated-orchestration-architecture

./: .gitignore  README.md
project02/: .gitignore  pyproject.toml
project02/.pytest_tmp/test_budget_exceeded_path0/: test.db
project02/.pytest_tmp/test_candidate_memory_approval0/: test.db
project02/.pytest_tmp/test_capabilities_and_secret_s0/: test.db
project02/.pytest_tmp/test_clarification_flow0/: test.db
project02/.pytest_tmp/test_complex_async_task_result0/: test.db
project02/.pytest_tmp/test_permission_denied_path_fo0/: test.db
project02/.pytest_tmp/test_simple_direct_task_flow0/: test.db
project02/.pytest_tmp/test_single_simple_tool_intent0/: test.db
project02/.pytest_tmp/test_tool_policy_loads_runtime0/: tool_policy.yaml
project02/app/: main.py
project02/app/agents/: registry.py  (+2 more)
project02/config/: tool_policy.yaml
project02/multi_agent_orchestration_framework.egg-info/: PKG-INFO  SOURCES.txt
project_new/: .gitignore  README.md  orchestration.db  pyproject.toml
project_new/app/: __init__.py  main.py
project_new/scripts/: verify_real_llm.py  verify_real_orchestrator.py  verify_real_research_task.py  verify_real_task.py  verify_real_tavily.py
project_new/tests/: test_api.py  test_artifact_api.py  test_artifact_tools.py  test_core_schemas.py  test_history_replay.py  test_llm_tools.py  test_markdown_ui.py  test_persistence_events.py  test_react_workflow.py  test_research_pipeline.py  test_runtime_controls.py  test_sessions.py  test_tool_safety.py  test_v2_features.py  test_v2_quality.py  test_v2b_workflows.py  test_workflows.py
(+118 files in other folders)
