[project]
name = "multi-agent-orchestration-framework"
version = "0.1.0"
description = "FastAPI MVP for a multi-agent orchestration framework"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "httpx",
  "pydantic",
  "uvicorn",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
plugins = []
ignore_missing_imports = true
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
