[project]
name = "multi-agent-orchestration"
version = "0.1.0"
description = "A lightweight Shannon-inspired multi-agent dynamic orchestration framework."
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "httpx",
  "pydantic",
  "uvicorn",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

